--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	/* line-height: 1; */
+	line-height: 1; 
 }
 ol, ul {
 	list-style: none;
@@ -60,7 +60,6 @@ h1, h2, h3, h4, h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
-    border:1px solid red;
 }
 
 p {
@@ -77,6 +76,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    margin-top:5%;
     border-bottom: 1px dashed black;
 }
 
@@ -144,4 +144,71 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+#heading{
+    display:flex;
+    align-content: flex-start;
+    align-items:center;
+    margin-top: 3%;
+    justify-content: space-evenly;
+}
+#heading #mainnav a{
+    text-transform: none;
+    text-decoration:none;
+    color:black;
+    padding:1%;
+    margin-top:2%;
+    margin-left:1%;
+    margin-right:1%;
+    width:100px;
+
+    text-align:center;
+    font-size:13px;
+
+}
+#mainnav{
+    
+    display:flex;
+    justify-content:space-between;
+    padding:1%;
+
+    flex-grow: 4;
+}
+#headimg img{
+    margin-left:0%;
+    margin-top:5%;
+    
+}
+#heading{
+    margin-top:3%;
+}
+#b1{
+    background-color: teal;
+
+}
+#b2{
+    background-color: gold;
+}
+#b3{
+    background-color: cadetblue;
+}
+#b4{
+    background-color: coral;
+}
+#b5{
+    background-color: crimson;
+}
+#b6{
+    background-color: forestgreen;
+}
+#b7{
+    background-color: darkorchid;
+}
+#b8{
+    background-color: hotpink;
+}
+#b9{
+    background-color: indigo;
+}#b10{
+    background-color: dodgerblue;
 }
